# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  linter.yml
gendiff/: __init__.py  diff_finder.py  generate_diff.py  parser.py  tags.py
gendiff/file_handler/: loader.py  parser.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_formatters.py  test_gen_diff.py
tests/fixtures/: result_json.txt  result_plain.txt  result_stylish.txt  test_generate_diff_result2  test_generate_diff_result3
